--- a/XdHtml/vc6ui.html
+++ b/XdHtml/vc6ui.html
@@ -2,25 +2,20 @@
 <script src="blclass.js"  type="text/javascript" ></script>
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
-<BODY>
-<div id="pageLevel" style="display:none">0</div>
+<BODY> 
 <div id="blPageV"></div>
 <div id="xddbg"></div>
-<div id="idMedia"></div> 
-<script type="text/javascript" src="xd.js"></script> 
-
  <textarea id="id_t1_html" style="display:none">
  <!-- id_t1_html -->
- <HTML><HEAD><TITLE>noName</TITLE> 
+ <HTML><HEAD><TITLE>xd2.html
+ </TITLE> 
 <script src="blclass.js"  type="text/javascript" ></script>
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
-<BODY>
-<div id="blPageV"></div>
+<BODY><div id="blPageV"></div>
 <div id="xddbg"></div>
-<div id="idMedia"></div> 
 <script type="text/javascript" src="xd.js"></script> 
- <!-- -->
+ <!-- ===id_t1_html=== -->
  </textarea>
 
  <textarea id="id_t2_html" style="display:none">
@@ -68,12 +63,13 @@ function _blClass1(){
 
 	var		_thisPageInf		= function(id,this_){ 
 		var v = document.getElementById(id);
-		var html = "";
+		var html = "blPageV";
 		html	+= ":";
 		html	+= this_.classV;
 		html	+= ":    ";
 		html	+= window.location;
 		if(v) v.innerHTML = html;
+		v.style.backgroundColor = blGrey[5];
 	};
 	var		_Go		= function(this_,o){
 		_thisPageInf("blPageV",this_);
@@ -97,17 +93,20 @@ function _blClass1(){
 var blk = new _blClass1;
 
 </script>
- <!--  -->
+ <!-- ===id_t2_html=== -->
  </textarea>
 
  <textarea id="id_t3_html" style="display:none">
  <!-- id_t3_html -->
- 
+ <script>
+document.write("xdtest v0.0.3 <br>");
+var d = new Date;
+document.write(d);
+ </script> 
 </BODY>
 </HTML>
 
- <!--  -->
- 
+ <!-- ===id_t3_html=== -->
  </textarea>
 
 <script>  
@@ -135,16 +134,14 @@ function add(a,b)
 	return r;
 }
 function _blClass1(){
-	this.classV		= "v0.0.54";//xd_2d
+	var jg			= null;
+	var _myBoard	= null;
+	var _fileName	= "index.html";
+	this.classV		= "v0.0.63";//xd_2d
 	this.className	= "_blClass1";  
-	function _on_off(d){
-		if(d.style.display=="block"){
-			d.style.display="none"; 
-		}
-		else{
-			d.style.display="block";
-		}
-	};
+	this.blh_GetFileName	= function(){
+		return _fileName;
+	} 
 	function _fun_2_taValue_2_div(f,d){
 		var o = _blo;
 		var d1 = o.blDiv(d,d.id+"_d1","blrTestdv","gray");
@@ -154,37 +151,191 @@ function _blClass1(){
 		var a = f; 
 		t.value = a;
 		d1.innerHTML = t.value.length;
+	}; 
+	this.blrSet1	= function(b,d){
+		var n = 0;
+		var b1 = blo0.blBtn(d,d.id+"b1","b1:"+n,blGrey[3]);
+		b1.innerHTML = "b1:"+n;
+		b1.onclick = function (){n++;_blMove(_myBoard,80,80)};
+		var b2 = blo0.blBtn(d,d.id+"b2","b2:"+n,blGrey[4]);
+		b2.innerHTML = "b2:"+n;
+		b2.onclick = function (){n++;_blMove(_myBoard,580,80)};
+		var b3 = blo0.blBtn(d,d.id+"b3","",blGrey[6]);
+		b3.innerHTML = "b3:"+n;
+		b3.onclick = function (){n++;_blMove(_myBoard,880,80)};
+		var b1 = blo0.blBtn(d,d.id+"b1","b1:"+n,blGrey[3]);
+		
+		var b4 = blo0.blBtn(d,d.id+"b4","",blGrey[7]);
+		b4.innerHTML = b4.innerHTML = "b4: " +n ;
+		b4.onclick = function (){
+			var _Timer = new _TimerClass;
+			n++;b4.innerHTML = "b4: " +n;
+			_on_off_div(b4,_Timer);	
+		};  
+		function _TimerClass(m){
+			var _v = blo0.blDiv(d,d.id+"_Timer","Timer",blGrey[5]);
+			if(_v.n){
+				_v.n++;
+			}
+			else{ 
+				_v.n	= 1;
+
+				this.v	= "v0.0.21";
+
+				var n	= 0;
+				var _t	= null; 
+
+				var showMe = function(m){blo0.blShowObj2Div(_v,m);};
+				showMe(this);
+
+				var btnStart = blo0.blBtn(_v,_v.id + "start","start",blGrey[3]);
+				btnStart.onclick = function(){
+					if(_t) return; 
+					_t = setInterval(function(){
+						n++;
+						var s = "";
+						var x = 0;
+						var y = 0;
+						var d = document.getElementById("id_Handle1");
+						if(d){ 
+								x = parseInt(d.style.left);
+								y = parseInt(d.style.top);
+
+								s = " x:" + x + " y:" +y;
+						}
+						v.innerHTML = n + s;
+						jg.clear();
+						jg.drawRect(x, y, 111, 120);
+						jg.paint();
+					}	
+					,100);	 
+				}
+				var btnStop = blo0.blBtn(_v,_v.id + "stop","stop",blGrey[4]);
+				btnStop.onclick = function(){
+						clearInterval(_t);
+						_t = null;
+				}
+			}
+			return _v;
+		};
+		_on_off_div(b,d);
 	};
-	this.blrXd3	= function(b,d){
-		var b = document.getElementById("xd3");
-		b.click();
+	this.bll1 = "----";
+
+	var _showTa = function(b,d,idTa){
+		var t = document.getElementById(idTa);  
+		t.style.width	= "100%";
+		t.style.height = "200px";
+		_on_off_div(b,t);
 	};
 
-	this.blrcreate_xd2_html	= function(b,d){
-		_on_off(d);
-		var txt = create_xd2_html(1,2);
-		_fun_2_taValue_2_div(txt,d);
-	};
-	this.blrTest	= function(b,d){
-		_on_off(d);
-		_fun_2_taValue_2_div(_blClass1,d);
-	};
+	this.blrSave	= function(b,d){
+		var b1 = blo0.blBtn(d,d.id+"b1","t1",blGrey[3]); 
+		b1.onclick = function (){_showTa(b1,d,"id_t1_html");}; 
 
+		var b2 = blo0.blBtn(d,d.id+"b2","t2",blGrey[3]); 
+		b2.onclick = function (){_showTa(b2,d,"id_t2_html");}; 
+		
+		var b3 = blo0.blBtn(d,d.id+"b3","t3",blGrey[3]); 
+		b3.onclick = function (){_showTa(b3,d,"id_t3_html");};  
+
+		_on_off_div(b,d);
+	};
+	this.bll2 = "----";  
+	this.blrDraw	= function(b,d){ 
+		var b1 = blo0.blBtn(d,d.id+"b1","clear",blGrey[3]); 
+		b1.onclick = function (){
+			jg.clear();
+		}; 
+
+		var b2 = blo0.blBtn(d,d.id+"b2","d1",blGrey[3]); 
+		b2.onclick = function (){
+			jg.drawRect(30, 135, 10, 10);jg.paint();
+
+		}; 
+		
+		var b3 = blo0.blBtn(d,d.id+"b3","d2",blGrey[3]); 
+		b3.onclick = function (){
+			jg.drawRect(130, 235, 10, 10);jg.paint();
+		};  
+
+		_on_off_div(b,d);
+	};
+	this.bll3 = "----"; 
+	this.blrRunJS	= function(b,d){ 
+		var v = blo0.blDiv(document.body,"id_div_blrRunJS","runJS",blGrey[5]);
+		var t = blo0.blTextarea(v,"id_ta_RunJS","xd","lightblue");t.style.width = "100%";t.style.height="200px";
+		var v1 = blo0.blDiv(v,v.id+"v1","v1",blGrey[5]);
+		var btnPlx1 = blo0.blBtn(v1,v1.id + "btnPlx1","plx1",blColor[11]);
+		btnPlx1.onclick = function(){
+			blo0.blScript("id_script_Plx1","vc6ui/plx1.js");
+		};
+		var btnPlx2 = blo0.blBtn(v1,v1.id + "btnPlx2","plx2",blColor[11]);
+		btnPlx2.onclick = function(){
+			blo0.blScript("id_script_Plx2","vc6ui/plx2.js");
+		};
+		var btnRun = blo0.blBtn(v,v.id + "__btnRun","run","red");
+		btnRun.onclick = function(){
+			eval(t.value);
+		};
+		var btnSnap = blo0.blBtn(v,v.id + "btnSnap","btnSnap","brown");
+		btnSnap.onclick = function(m){
+			if(m.n){
+				return m.onclick;
+			}
+			else{
+				m.n = 1;
+				var bs = [];
+				var n = 0;
+				var btnSel = null;
+				var b = blo0.blBtn(v,v.id + "btnDel" + n,"del","brown");
+				b.onclick = function(){ 
+					if(btnSel){
+						btnSel.parentNode.removeChild(btnSel);
+						btnSel = null;
+					}
+				}
+				
+				return function(){
+					var b = blo0.blBtn(v,v.id + "btnSnap" + n,"b"+n,"brown");
+					b.onclick = function(btn){
+						return function(){
+							t.value = btn.txt;btnSel = btn; 
+							for(i in bs){
+								if(bs[i]!=btnSel) bs[i].style.backgroundColor = blColor[6];
+								else bs[i].style.backgroundColor = blColor[5];
+							}
+						}
+					}(b);
+					b.txt = t.value;
+					bs[n] = b;n++;
+				}
+			}
+		}(btnSnap);
+		_on_off_div(b,v);
+	}; 
 	var		_blo	= new blClass;
 	var		_me		= this;
 
 	var		_thisPageInf		= function(id,this_){ 
 		var v = document.getElementById(id);
-		var html = "";
+		var html = "blPageV";
 		html	+= ":";
 		html	+= this_.classV;
 		html	+= ":    ";
 		html	+= window.location;
 		if(v) v.innerHTML = html;
+		v.style.backgroundColor = blGrey[5];
+	};
+	var		_click		= function(id){ 
+		var v = document.getElementById(id);
+		if(v) v.click();
 	};
 	var		_Go		= function(this_,o){
 		_thisPageInf("blPageV",this_);
 		var b1 = o.blBtn(xddbg,"b1",this_.className,"red");
+		var refresh = o.blLink(xddbg,"refresh","refresh","?r=0",blColor[7]);
+		var xd2_html = o.blLink(xddbg,"xd2.html","xd2.html","xd2.html",blColor[6]);
 		var xd1 = o.blLink(xddbg,"xd1","save","?xd=save","Salmon");
 		var xd2 = o.blLink(xddbg,"xd2","xd2","?xd=xd2","skyblue");
 		var xd3 = o.blLink(xddbg,"xd3","xd3","?xd=xd3","green");
@@ -193,20 +344,27 @@ function _blClass1(){
 			return true;
 		};
 		var d1 = o.blDiv(xddbg,"d1","d1","greenyellow");
-		b1.onclick = function(this_){
-			var b	= false;
-			var d	= null;
-			return function(){
-				b	= !b;
-				d	= o.blDiv(xddbg,"idShow_me","_me","gray");
-				o.blShowObj2Div(d,this_);		 
-				d.style.display = !b?"none":"block";
+		jg = new jsGraphics("d1");
+
+		b1.onclick = function(this_){ 
+				_myBoard		= blo0.blMDiv(document.body,"MMMM","mmmm",350,50,200,200,blColor[3]);
+				var divShowMe	= blo0.blDiv(_myBoard,_myBoard.id + "ShowMe","divShowMe",blColor[6]);
+				blo0.blShowObj2Div(divShowMe,this_);
+			return function(){ 
+				_on_off_div(b1,_myBoard);
 			}
 		}(_me);
+		b1.click(); 
 	};
 	_Go(this,_blo);
 }
-var blk = new _blClass1;
+var o = new _blClass1;
+function get_file_name(a,b){
+	var r = "";
+	var p = "C:\\Users\\13699\\xd1\\baidu\\VC6_EN\\VC6_EN\\VC6EN\\MyProjects\\XdHtml\\vc6ui\\";
+	r = p + o.blh_GetFileName();
+	return r;
+}
 
 </script>
 </BODY>
