--- a/XdHtml/vc6ui.html
+++ b/XdHtml/vc6ui.html
@@ -3,6 +3,10 @@
 <SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
 </HEAD>
 <BODY> 
+<div id="tmp">
+<a href="vc6ui/index.html">index.html</a>
+
+</div>
 <div id="blPageV"></div>
 <div id="xddbg"></div>
  <textarea id="id_t1_html" style="display:none">
