--- a/XdHtml/index1.html
+++ b/XdHtml/index1.html
@@ -5,12 +5,12 @@
 <title>index.html</title>
 <style>
 html,body,dl,dt,dd,ul,li,h1,h2,P,a,img {margin:0;padding:0;border:none;list-style:none;}
-body {font: 12px;color:#333;background:#001111 repeat-y center 0;}
+body {font: 12px;color:#333;background:#007AFF repeat-y center 0;}
 a {color:#666;text-decoration: none;}
 a:hover {color:#C60;text-decoration: underline;}
 
 .head {width:960px; overflow:hidden; margin:auto;}
-.menu {width:960px;padding:6px 0 5px 0;background:#183 no-repeat 0 0; margin:auto; display:table;}
+.menu {width:960px;padding:6px 0 5px 0;background:#f3a no-repeat 0 0; margin:auto; display:table;}
 .menu ul {padding-left:5px;}
 .menu ul li {font-size:13px;font-weight:bold;float:left;position: relative;margin-right:3px;}
 .menu ul li a {color:#FFF;display:block;padding: 7px 12px 5px 12px;} 
@@ -30,16 +30,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.23</a>
-      <ul>
-        <li><a href="index1.html">index1.html</a></li>
-	  </ul>
-	</li>
-    <li><a href="plx/index.html">plx</a>
-      <ul>
-        <li><a href="#" id="id_plx_design">design</a></li>
-	  </ul>
-	</li>
+    <li><a href="index.html">v0.0.4</a></li>
     <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">ÏîÄ¿</a>
       <ul>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">hjhy</a></li>
@@ -117,17 +108,16 @@ a:hover {color:#C60;text-decoration: underline;}
  </ul>     
  </div>
 
-<script src="blclass.js"  type="text/javascript" ></script> 
+<script src="blclass.js"  type="text/javascript" ></script>
+<SCRIPT src="jsgraphics.js" type=text/javascript></SCRIPT>
+<div id="pageLevel" style="display:none">0</div>
+<div id = "idDivBlV" style="display:none;">v0.1.12</div>
+<div id="blPageV"></div><div id="xddbg"></div>
+<script type="text/javascript" src="xd.js"></script> 
+
 </body>
 </html>
 <script type="text/javascript">
-function _blLoad()
-{
-	buildsubmenus_horizontal();
-	bl$("id_plx_design").onclick = function(){
-		blo0.blScript("id_script_plx_design","plx/design.js");
-	};
-}
 var menuids=["treemenu1"] 
 function buildsubmenus_horizontal()
 {
@@ -159,10 +149,10 @@ function buildsubmenus_horizontal()
 	  }
 		if (window.addEventListener)
 		{
-				window.addEventListener("load", _blLoad, false)
+				window.addEventListener("load", buildsubmenus_horizontal, false)
 		}
 		else if (window.attachEvent)
 		{
-				window.attachEvent("onload", _blLoad)
+				window.attachEvent("onload", buildsubmenus_horizontal)
 		}
 </script>
