--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -30,7 +30,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.23</a>
+    <li><a href="index.html">v0.0.25</a>
       <ul>
         <li><a href="index1.html">index1.html</a></li>
 	  </ul>
@@ -126,6 +126,8 @@ function _blLoad()
 	buildsubmenus_horizontal();
 	bl$("id_plx_design").onclick = function(){
 		blo0.blScript("id_script_plx_design","plx/design.js");
+		var c = bl$("id_div_plx__blDesignClass");
+		if(c) c.style.display = "block";
 	};
 }
 var menuids=["treemenu1"] 
