--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -30,7 +30,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.25</a>
+    <li><a href="index.html">v0.0.26</a>
       <ul>
         <li><a href="index1.html">index1.html</a></li>
 	  </ul>
@@ -40,7 +40,7 @@ a:hover {color:#C60;text-decoration: underline;}
         <li><a href="#" id="id_plx_design">design</a></li>
 	  </ul>
 	</li>
-    <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">ÏîÄ¿</a>
+    <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">é¡¹ç›®</a>
       <ul>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">hjhy</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/BlCDs">BlCDs</a></li>
@@ -49,14 +49,14 @@ a:hover {color:#C60;text-decoration: underline;}
         <li><a target="_blank" href="http://git.oschina.net/hjhy/BlABooks">BlABooks</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/BlABooks">BlABooks</a></li>
         <li><a>-----</a></li>
-        <li><a target="_blank" href="http://git.oschina.net/hjhy/beautifullover.org">Æ¯²´ÕßÀÖÔ°¹ÙÍø</a></li>
+        <li><a target="_blank" href="http://git.oschina.net/hjhy/beautifullover.org">æ¼‚æ³Šè€…ä¹å›­å®˜ç½‘</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/javascript">javascript</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/weixin">weixin</a>
             <ul>
               <li><a target="_blank"  href="http://mp.weixin.qq.com">mp.weixin.qq.com</a></li>   
-              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/1">Æ¯²´ÕßÀÖÔ°¹«ÖÚºÅ</a></li>  
-              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/2">ºìÖĞ22°à¹«ÖÚºÅ</a></li> 
-              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/3">µÑÉùàÚÁÁ¹«ÖÚºÅ</a></li>  
+              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/1">æ¼‚æ³Šè€…ä¹å›­å…¬ä¼—å·</a></li>  
+              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/2">çº¢ä¸­22ç­å…¬ä¼—å·</a></li> 
+              <li><a target="_blank"  href="http://git.oschina.net/hjhy/weixin/milestones/3">ç¬›å£°å˜¹äº®å…¬ä¼—å·</a></li>  
               
             </ul>
         </li>
@@ -85,22 +85,22 @@ a:hover {color:#C60;text-decoration: underline;}
             <li><a target="_blank" href="http://mail.163.com">mail.163.com</a></li> 
           </ul>
         </li>
-        <li><a target="_blank"  href="http://www.taobao.com">¹ºÎï</a>
+        <li><a target="_blank"  href="http://www.taobao.com">è´­ç‰©</a>
           <ul>
-            <li><a target="_blank"  href="http://shop35351121.taobao.com">É½¹È·çÌÔ±¦µê</a></li>
-            <li><a target="_blank" href="http://www.taobao.com">ÌÔ±¦Ö÷Ò³</a></li>   
+            <li><a target="_blank"  href="http://shop35351121.taobao.com">å±±è°·é£æ·˜å®åº—</a></li>
+            <li><a target="_blank" href="http://www.taobao.com">æ·˜å®ä¸»é¡µ</a></li>   
           </ul>
         </li>
-        <li><a target="_blank"  href="http://v.qq.com">ÊÓÆµÍøÕ¾</a>
+        <li><a target="_blank"  href="http://v.qq.com">è§†é¢‘ç½‘ç«™</a>
           <ul>
-            <li><a target="_blank"  href="http://v.qq.com">ÌÚÑ¶ÊÓÆµ</a></li>
-            <li><a target="_blank" href="http://www.youku.com">ÓÅ¿á</a></li>  
+            <li><a target="_blank"  href="http://v.qq.com">è…¾è®¯è§†é¢‘</a></li>
+            <li><a target="_blank" href="http://www.youku.com">ä¼˜é…·</a></li>  
             <li><a target="_blank" href="http://www.youtube.com">youtube</a></li>   
           </ul>
         </li>
-        <li><a target="_blank"  href="http://v.qq.com">ÔÚÏß¹¤¾ß</a>
+        <li><a target="_blank"  href="http://v.qq.com">åœ¨çº¿å·¥å…·</a>
           <ul>
-            <li><a target="_blank"  href="http://sandbox.runjs.cn/show/zqwuwbil">ÔÚÏßÎå±Ê</a></li>   
+            <li><a target="_blank"  href="http://sandbox.runjs.cn/show/zqwuwbil">åœ¨çº¿äº”ç¬”</a></li>   
             <li><a target="_blank" href="http://www.runjs.cn">runjs.cn</a></li>  
             <li><a target="_blank" href="http://www.slpl.org">slpl.org</a></li>   
           </ul>
@@ -108,10 +108,10 @@ a:hover {color:#C60;text-decoration: underline;}
       </ul>
     </li>
     
-    <li id="btfMenue"><a href="http://www.beautifullover.org">Æ¯²´ÕßÀÖÔ°¹ÙÍø</a>    
+    <li id="btfMenue"><a href="http://www.beautifullover.org">æ¼‚æ³Šè€…ä¹å›­å®˜ç½‘</a>    
           <ul>
-            <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">ÏîÄ¿Ö÷Ò³</a></li>  
-            <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">PagesÖ÷Ò³</a></li>  
+            <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">é¡¹ç›®ä¸»é¡µ</a></li>  
+            <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">Pagesä¸»é¡µ</a></li>  
           </ul>        
     </li>
  </ul>     
