--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -30,11 +30,12 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.26</a>
+    <li><a href="index.html">v0.0.27</a>
       <ul>
+        <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
-	  </ul>
-	</li>
+      </ul>
+    </li>
     <li><a href="plx/index.html">plx</a>
       <ul>
         <li><a href="#" id="id_plx_design">design</a></li>
