--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -2,6 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>   
+<META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
 <title>index.html</title>
 <style>
 html,body,dl,dt,dd,ul,li,h1,h2,P,a,img {margin:0;padding:0;border:none;list-style:none;}
@@ -30,7 +31,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.31</a>
+    <li><a href="index.html">v0.0.35</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
@@ -41,7 +42,7 @@ a:hover {color:#C60;text-decoration: underline;}
         <li><a href="#" id="id_plx_design">design</a></li>
 	  </ul>
 	</li>
-    <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">项目</a>
+    <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">projects</a>
       <ul>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">hjhy</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/BlCDs">BlCDs</a></li>
@@ -50,7 +51,7 @@ a:hover {color:#C60;text-decoration: underline;}
         <li><a target="_blank" href="http://git.oschina.net/hjhy/BlABooks">BlABooks</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/BlABooks">BlABooks</a></li>
         <li><a>-----</a></li>
-        <li><a target="_blank" href="http://git.oschina.net/hjhy/beautifullover.org">漂泊者乐园官网</a></li>
+        <li><a target="_blank" href="http://git.oschina.net/hjhy/beautifullover.org">beautifullover.org</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/javascript">javascript</a></li>
         <li><a target="_blank" href="http://git.oschina.net/hjhy/weixin">weixin</a>
             <ul>
@@ -116,7 +117,7 @@ a:hover {color:#C60;text-decoration: underline;}
       </ul>
     </li>
     
-    <li id="btfMenue"><a href="http://www.beautifullover.org">漂泊者乐园官网</a>    
+    <li id="btfMenue"><a href="http://www.beautifullover.org">beautifullover.org</a>    
           <ul>
             <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">项目主页</a></li>  
             <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">Pages主页</a></li>  
@@ -129,6 +130,7 @@ a:hover {color:#C60;text-decoration: underline;}
 </body>
 </html>
 <script type="text/javascript">
+//this.blFunListPath = "https://littleflute.github.io/vc6/XdHtml/";
 function _blLoad()
 {
 	buildsubmenus_horizontal();
