--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -31,7 +31,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.35</a>
+    <li><a href="index.html">v0.0.37</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
@@ -130,7 +130,8 @@ a:hover {color:#C60;text-decoration: underline;}
 </body>
 </html>
 <script type="text/javascript">
-//this.blFunListPath = "https://littleflute.github.io/vc6/XdHtml/";
+this.blFunListPath = "https://littleflute.github.io/vc6/XdHtml/";
+var blPath	= "";//"https://littleflute.github.io/vc6/XdHtml/";
 function _blLoad()
 {
 	buildsubmenus_horizontal();
