--- a/XdHtml/cchess/index.html
+++ b/XdHtml/cchess/index.html
@@ -2,7 +2,7 @@
 <script src="../blclass.js"  type="text/javascript" ></script> 
 </HEAD><BODY>
 <div id="pageLevel" style="display:none">1</div>
-<div id = "idDivBlV" style="display:none;">v0.1.24</div>
+<div id = "idDivBlV" style="display:none;">v0.1.25</div>
 <div id="blPageV"></div><div id="xddbg"></div>
 <script type="text/javascript" src="../xd.js"></script> 
 <script>
@@ -99,6 +99,8 @@ btn3_Next.onclick = function(){
 	var index = blo0.blLink(d,d.id+"index","index",url,"skyblue");  
 	var url = "xqbase/getFromXQBASE.html";
 	var getFromXQBASE = blo0.blLink(d,d.id+"getFromXQBASE","getFromXQBASE",url,"red");  
+	var url = "xdBoard.html";
+	var getFromXQBASE = blo0.blLink(d,d.id+"xdBoard","xdBoard",url,"brown");  
  
 }
  function _createBaseNav(d){
