--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -12,13 +12,18 @@
    
   </head>
  <body>
-    <div id = "xdMainDiv" style="border:1px green solid;"><a href="?xd=0">V0.0.15</a></div> 
+    <div id = "xdMainDiv" style="border:1px green solid;">
+	<a href="?xd=0">V0.0.22</a>
+	<a href="../index.html">[..]</a>
+	<a href="./index.html">[chess]</a>
+	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
+	</div>  
  
-    <div style="height:16px"></div>
-    <div style="text-align:center;white-space:nowrap">
-      <span class="td" style="margin-right:10px">
+      <span  style="float:left;margin-right:10px">
         <div id="container"style="border:1px blue solid;" ></div>
-      </span><span class="td" style="vertical-align:top;width:120px;border:1px reds solid;">
+      </span>
+
+	  <span  style="float:left;vertical-align:top;width:120px;border:1px reds solid;">
 
 	  <div style="text-align:left;border:1px blue solid;">
         <div class="label">Who go first?</div>
@@ -47,8 +52,9 @@
         <div><select id="selMoveList" size="10" style="font-family:????" onchange="moveList_change()">
           <option selected value="0">=== start ===</option>
         </select></div>
-      </div></span>
-    </div>
+      </div>
+	  </span> 
+
     <script type="text/javascript"><!--
 "use strict";
 
