--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -13,7 +13,7 @@
   </head>
  <body>
     <div id = "xdMainDiv" style="border:1px green solid;">
-	<a href="?xd=0">V0.0.46</a>
+	<a href="?xd=0">V0.0.47</a>
 	<a href="../index.html">[..]</a>
 	<a href="./index.html">[chess]</a>
 	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
@@ -143,7 +143,7 @@ function moveList_change() {
   board.flushBoard();
 }
 function _CtrlClass(){
-	var v = "v0.0.34";
+	var v = "v0.0.35";
 	var _myMsgWrap = null;
 	var _myBoardWrap = null;
 	var divMsg = null;
@@ -188,6 +188,9 @@ function _CtrlClass(){
 		}
 		_cchessBoard.computer = 0;
 		_cchessBoard.restart(STARTUP_FEN[selHandicap.selectedIndex]);
+	};
+	this.blrRetract = function(b,d){ 
+		_cchessBoard.retract(); 
 	};
 	this.blhRun = function(){
 		var d = blo0.blMDiv(document.body,"id_div__CtrlClass","_CtrlClass:",850,50,400,200,"purple");  
