--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -13,7 +13,7 @@
   </head>
  <body>
     <div id = "xdMainDiv" style="border:1px green solid;">
-	<a href="?xd=0">V0.0.47</a>
+	<a href="?xd=0">V0.0.51</a>
 	<a href="../index.html">[..]</a>
 	<a href="./index.html">[chess]</a>
 	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
@@ -143,19 +143,22 @@ function moveList_change() {
   board.flushBoard();
 }
 function _CtrlClass(){
-	var v = "v0.0.35";
+	var v = "v0.0.41";
 	var _myMsgWrap = null;
 	var _myBoardWrap = null;
 	var divMsg = null;
+	var divMoveList = null;
 	var _cchessBoard = null;
 	var _bCreate = false;
+	var _moveList	= [];
 	this.blrBoard0 = function(b,d){  
 		_on_off_div(b,xdBoard0);
 	};
 	this.blrBoard = function(b,d){
 	    if(!_bCreate){
 			_myMsgWrap = blo0.blMDiv(document.body,"id_div__myMsgWrap","_myMsgWrap:",10,30,400,200,"green");  
-			divMsg = blo0.blDiv(_myMsgWrap,_myMsgWrap.id+"divMsg","divMsg",blGrey[0]);
+			divMsg = blo0.blDiv(_myMsgWrap,_myMsgWrap.id+"divMsg","divMsg",blGrey[0]); 
+			divMoveList = blo0.blDiv(_myMsgWrap,_myMsgWrap.id+"divMoveList","divMoveList",blGrey[5]);
 			_myBoardWrap = blo0.blMDiv(document.body,"id_div___myBoardWrap","_myBoard:",250,-10,400,200,"brown"); 
 			var divBoard = blo0.blDiv(_myBoardWrap,_myBoardWrap.id+"_divBoard","",blGrey[0]);
 			var imgPath = "https://littleflute.github.io/cchess0/cchess/images/";
@@ -163,6 +166,7 @@ function _CtrlClass(){
 			_cchessBoard = new Board(divBoard,imgPath , soundsPath); 
 			_cchessBoard.computer = 1;
 			_cchessBoard.clickSquare = _newClick;
+			_cchessBoard.onAddMove	= _onAddMove;
 			_bCreate = true;
 		}
 		_on_off_div(b,_myBoardWrap);
@@ -197,6 +201,16 @@ function _CtrlClass(){
 		var dShowMe = blo0.blDiv(d,d.id+"dShowMe","dShowMe",blGrey[0]);
 		blo0.blShowObj2Div(dShowMe,this);
 		bl$("blrBoard0").click();
+	};
+	function _onAddMove() {
+	  var board = _cchessBoard;
+	  var counter = (board.pos.mvList.length >> 1);
+	  var space = (counter > 99 ? "    " : "   ");
+	  counter = (counter > 9 ? "" : " ") + counter + ".";
+	  var text = (board.pos.sdPlayer == 0 ? space : counter) + move2Iccs(board.mvLast);
+	  var value = "" + board.mvLast;
+	  _moveList.push(text);
+	  blo0.blShowObj2Div(divMoveList,_moveList);
 	};
 	function _newClick(sq_) { 
 					function myA_I (c){ 
