--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -13,7 +13,7 @@
   </head>
  <body>
     <div id = "xdMainDiv" style="border:1px green solid;">
-	<a href="?xd=0">V0.0.111</a>
+	<a href="?xd=0">V0.0.113</a>
 	<a href="../index.html">[..]</a>
 	<a href="./index.html">[chess]</a>
 	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
@@ -143,7 +143,8 @@ function moveList_change() {
   board.flushBoard();
 }
 function _CtrlClass(){
-	var v = "v0.0.61";
+	var v = "v0.0.115";
+	var _myPuJSWrap = null;
 	var _myMsgWrap = null;
 	var _myBoardWrap = null;
 	var divMsg = null;
@@ -170,6 +171,7 @@ function _CtrlClass(){
 			_cchessBoard.computer = 1;
 			_cchessBoard.clickSquare = _newClick;
 			_cchessBoard.onAddMove	= _onAddMove;
+			_cchessBoard.blhGo	= go;
 			id_select_MoveList.onchange = _moveList_change;
 			_bCreate = true;
 		}
@@ -211,12 +213,51 @@ function _CtrlClass(){
 		selMoveList.options.length = board.pos.mvList.length;
 		selMoveList.selectedIndex = selMoveList.options.length - 1;
 	};
+	this.blrA0A1 = function(b,d){  
+                go(_cchessBoard,'a','0','a','1');
+	};
+	this.blrLoadPuJS = function(b,d){  
+		if(_myPuJSWrap==null){
+			_myPuJSWrap = blo0.blMDiv(document.body,"id_div__myPuJSWrap","_myPuJSWrap:",810,330,400,200,"blue");  
+			var ld = blo0.blDiv(_myPuJSWrap,"id_div_pu_list","ld",blGrey[5]);
+			ld.board = _cchessBoard;
+			if(!this.blFunListPath){
+				blo0.blScript("id_script_pu_list","pu/puList.js");
+			}
+			else{
+				blo0.blScript("id_script_pu_list",this.blFunListPath + "pu/puList.js");
+			}
+		}
+		_on_off_div(b,_myPuJSWrap);
+	};
 	this.blhRun = function(){
 		var d = blo0.blMDiv(document.body,"id_div__CtrlClass","_CtrlClass:",850,50,400,200,"purple");  
 		var dShowMe = blo0.blDiv(d,d.id+"dShowMe","dShowMe",blGrey[0]);
 		blo0.blShowObj2Div(dShowMe,this);
 		bl$("blrBoard0").click();
 	};
+	var getY = function(c)
+    			{
+                	if(c=='a') return 0;
+                    if(c=='b') return 1;
+                    if(c=='c') return 2;
+                    if(c=='d') return 3;
+                    if(c=='e') return 4;
+                    if(c=='f') return 5;
+                    if(c=='g') return 6;
+                    if(c=='h') return 7;
+                    if(c=='i') return 8;
+                }
+    var x = [195,179,163,147,131,115,99,83,67,51];
+	var go = function(board,c1,c2,c3,c4){ 
+		if(board==null) return;
+        			var g1 = x[c2]+getY(c1); 
+        			var g2 = x[c4]+getY(c3); 
+                    var g1 = board.flipped(g1);
+                    var g2 = board.flipped(g2); 
+            		board.imgSquares[g1].onmousedown(); 
+            		board.imgSquares[g2].onmousedown(); 
+    			}
 	function _blSelect(oBoss,id,size,txt)					
  	{  	 			
    		var s = "";							 
